--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@google/genai": "^1.8.0",
         "@google/generative-ai": "^0.24.1",
         "@vitalets/google-translate-api": "^9.0.0",
+        "archiver": "^7.0.1",
         "async": "^3.2.4",
         "awesome-phonenumber": "^2.64.0",
         "axios": "^0.27.2",
