--- a/package.json
+++ b/package.json
@@ -95,6 +95,10 @@
         "util": "^0.12.4",
         "wa-sticker-formatter": "^4.3.2",
         "yargs": "^17.5.1",
-        "yt-search": "^2.10.3"
+        "yt-search": "^2.10.3",
+        "ytdl-core": "^4.11.5"
+    },
+    "overrides": {
+        "jimp": "0.16.13"
     }
 }
