--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     },
     "license": "MIT",
     "dependencies": {
-        "@adiwajshing/baileys": "github:whiskeysockets/baileys",
+        "@adiwajshing/baileys": "npm:baileys@6.7.19",
         "@adiwajshing/keyed-db": "^0.2.4",
         "@google/genai": "^1.8.0",
         "@google/generative-ai": "^0.24.1",
